--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,44 @@
 html,
 body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.form-signin {
-  max-width: 330px;
-  padding: 1rem;
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.form-signin .form-floating:focus-within {
-  z-index: 2;
+.header {
+  background-color: #141e30;
+  color: #fff;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+.content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.footer {
+  background-color: #243b55;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 14px;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
 }
