--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="mt-4">
   <h4>Admin Dashboard</h4>
   <div class="d-flex mt-2 gap-4">
     <ul class="nav nav-pills flex-column">
