--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -1,1 +1,29 @@
-<p>Room List Admin</p>
+<div class="container-md p-4">
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Room Id</th>
+          <th scope="col">Room Number</th>
+          <th scope="col">Room Type</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="" *ngFor="let r of rooms">
+          <td>{{ r.RoomID }}</td>
+          <td>{{ r.RoomNumber }}</td>
+          <td>{{ r.RoomType | uppercase }}</td>
+          <td
+            [ngClass]="{
+              'text-success': r.RoomStatus === 0,
+              'text-danger': r.RoomStatus === 1
+            }"
+          >
+            {{ r.RoomStatus === 0 ? "Available" : "Booked" }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
