--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <body>
-  <app-navbar></app-navbar>
+  <ng-container *ngIf="userSignedIn">
+    <app-navbar></app-navbar>
+  </ng-container>
   <div class="container">
-    <router-outlet></router-outlet>
+    <ng-container>
+      <router-outlet></router-outlet>
+    </ng-container>
   </div>
   <app-footer></app-footer>
 </body>
