Preserve login state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <ng-container *ngIf="userSignedIn">
+  <ng-container *ngIf="isLoggedIn">
     <app-navbar></app-navbar>
   </ng-container>
   <div class="container">
