--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -20,7 +20,7 @@
       </li>
     </ul>
 
-    <div class="w-75 border">
+    <div class="w-75 border-start">
       <router-outlet></router-outlet>
     </div>
   </div>
