--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,7 +1,5 @@
-<body
-  class="d-flex justify-content-center align-items-center py-4 w-100 min-vh-100"
->
-  <main class="form-signin w-50 m-auto">
+<body class="d-flex justify-content-center align-items-center py-4 w-100">
+  <main class="form-signin w-50">
     <img src="/assets/login-2.jpg" alt="login" width="300" height="300" />
     <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
