--- a/src/app/booking/booking/booking.component.html
+++ b/src/app/booking/booking/booking.component.html
@@ -1,1 +1,29 @@
-<p>booking works!</p>
+<div class="container-md p-4">
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Room Id</th>
+          <th scope="col">Room Number</th>
+          <th scope="col">Room Type</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="" *ngFor="let r of bookings">
+          <td>{{ r.id }}</td>
+          <td>{{ r.roomId }}</td>
+          <td>{{ r.userId }}</td>
+          <td
+            [ngClass]="{
+              'text-success': r.status === 0,
+              'text-danger': r.status === 1
+            }"
+          >
+            {{ r.status === 0 ? "Available" : "Booked" }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
