--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,6 +1,15 @@
 <body class="d-flex justify-content-center align-items-center py-4 w-100">
+  <ngb-toast
+    *ngIf="show"
+    [autohide]="true"
+    (hidden)="show = false"
+    [class]="'bg-danger text-light toast'"
+  >
+    {{ toastMessage }}
+  </ngb-toast>
+
   <main class="form-signin w-50">
-    <img src="/assets/login-2.jpg" alt="login" width="300" height="300" />
+    <img ngSrc="/assets/login-2.jpg" alt="login" width="300" height="300" />
     <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -41,6 +50,12 @@
       >
         Sign in
       </button>
+
+      <p class="mt-2">
+        <a href="#" class="link-underline-primary" routerLink="/auth/register"
+          >Register</a
+        >
+      </p>
     </form>
   </main>
 </body>
