--- a/src/app/auth/sign-in/sign-in.component.css
+++ b/src/app/auth/sign-in/sign-in.component.css
@@ -23,3 +23,10 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.toast {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+}
