--- a/src/app/user/rooms/rooms.component.html
+++ b/src/app/user/rooms/rooms.component.html
@@ -1,4 +1,14 @@
 <div class="container mt-4">
+  <ngb-toast
+    *ngIf="show"
+    [autohide]="true"
+    (hidden)="show = false"
+    [ngClass]="toastStyle"
+    style="position: fixed; top: 80px; right: 20px; z-index: 1"
+  >
+    {{ toastMessage }}
+  </ngb-toast>
+
   <div>
     <h3>Rooms</h3>
     <p class="lead">This rooms are available for booking</p>
