Add Room, Edit room

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,7 +5,7 @@
     *ngIf="show"
     [autohide]="true"
     (hidden)="show = false"
-    [class]="'bg-danger text-light toast'"
+    [ngClass]="toastStyle"
   >
     {{ toastMessage }}
   </ngb-toast>
@@ -27,6 +27,7 @@
           type="email"
           class="form-control"
           id="email"
+          formControlName="email"
           placeholder="Enter email"
           required
         />
