--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
 
           <ng-container *ngIf="role === 'admin'; else userNavigation">
             <li class="nav-item">
-              <a class="nav-link" routerLink="dashboard/admin">Dashboard</a>
+              <a class="nav-link" routerLink="admin/dashboard">Dashboard</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="profile">Profile</a>
