--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,22 +1,19 @@
 <section class="mt-4">
-  <h4>Admin Dashboard</h4>
-  <div class="d-flex mt-2 gap-4">
+  <h3>Admin Dashboard</h3>
+  <div class="d-flex mt-4 gap-4">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="/dashboard/admin/room"
+        <a class="nav-link active" routerLink="/admin/dashboard/room"
           >Room List</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard/admin/booking"
+        <a class="nav-link" routerLink="/admin/dashboard/booking"
           >Booking List</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard/admin/user">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard/admin/user">Disabled</a>
+        <a class="nav-link" routerLink="/admin/dashboard/user">User List</a>
       </li>
     </ul>
 
