--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -9,7 +9,7 @@
   </ngb-toast>
 
   <main class="form-signin w-50">
-    <img ngSrc="/assets/login-2.jpg" alt="login" width="300" height="300" />
+    <img src="/assets/login-2.jpg" alt="login" width="300" height="300" />
     <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -41,7 +41,7 @@
           value="remember-me"
           id="rememberMe"
         />
-        <label class="form-check-label" for="rememberMe"> Remember me </label>
+        <label class="form-check-label" for="rememberMe">Remember me</label>
       </div>
       <button
         class="btn btn-primary w-100 py-2"
