--- a/src/app/user/bookings/bookings.component.html
+++ b/src/app/user/bookings/bookings.component.html
@@ -1,7 +1,9 @@
 <div class="container mt-4">
   <div>
     <h3>Bookings</h3>
-    <p class="lead">This is your active booking</p>
+    <p class="lead" *ngIf="bookings.length !== 0">
+      This is your active booking
+    </p>
   </div>
 
   <ngb-toast
