Delete booking function

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -3,17 +3,28 @@
   <div class="d-flex mt-4 gap-4">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="/admin/dashboard/room"
+        <a
+          class="nav-link"
+          routerLink="/admin/dashboard/room"
+          routerLinkActive="active"
           >Room List</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/admin/dashboard/booking"
+        <a
+          class="nav-link"
+          routerLink="/admin/dashboard/booking"
+          routerLinkActive="active"
           >Booking List</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/admin/dashboard/user">User List</a>
+        <a
+          class="nav-link"
+          routerLink="/admin/dashboard/user"
+          routerLinkActive="active"
+          >User List</a
+        >
       </li>
     </ul>
 
