--- a/src/app/admin/room-list/room-list.component.html
+++ b/src/app/admin/room-list/room-list.component.html
@@ -1,9 +1,97 @@
 <ng-template #addRoomModal let-modal>
-  <!-- Add Room Modal Code -->
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add Room</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <form [formGroup]="addRoomForm" (ngSubmit)="onSubmit('add')">
+    <div class="modal-body">
+      <div class="form-floating mb-3">
+        <input
+          type="roomNumber"
+          class="form-control"
+          name="roomNumber"
+          id="roomNumber"
+          formControlName="roomNumber"
+          [value]="addRoomForm.value.roomNumber"
+        />
+        <label for="number">Room Number</label>
+      </div>
+      <div class="mb-3">
+        <label for="roomType" class="form-label">Type</label>
+        <select
+          class="form-select form-select-lg form-floating"
+          name="roomType"
+          id="roomType"
+          formControlName="roomType"
+          [value]="addRoomForm.value.roomType"
+        >
+          <option value="single" selected>Single</option>
+          <option value="double">Double</option>
+        </select>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button
+        type="button"
+        class="btn btn-outline-dark"
+        (click)="modal.dismiss('Cancel click')"
+      >
+        Cancel
+      </button>
+      <button type="submit" class="btn btn-outline-dark">Submit</button>
+    </div>
+  </form>
 </ng-template>
 
 <ng-template #editRoomModal let-modal>
-  <!-- Edit Room Modal Code -->
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Edit Room</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <form [formGroup]="addRoomForm" (ngSubmit)="onSubmit('edit')">
+    <div class="modal-body">
+      <div class="form-floating mb-3">
+        <input
+          type="number"
+          class="form-control"
+          formControlName="roomNumber"
+          [value]="selectedRoom.number"
+        />
+        <label for="number">Room Number</label>
+      </div>
+      <div class="mb-3">
+        <label for="roomType" class="form-label">Room Type</label>
+        <select
+          class="form-select form-select-lg form-floating"
+          formControlName="roomType"
+          [value]="selectedRoom.type"
+        >
+          <option value="single">Single</option>
+          <option value="double">Double</option>
+        </select>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button
+        type="button"
+        class="btn btn-outline-dark"
+        (click)="modal.dismiss('Cancel click')"
+      >
+        Cancel
+      </button>
+      <button type="submit" class="btn btn-outline-dark">Submit</button>
+    </div>
+  </form>
 </ng-template>
 
 <ngb-toast
@@ -25,10 +113,11 @@
           <th scope="col">Room Type</th>
           <th scope="col">Booked By</th>
           <th scope="col">Status</th>
+          <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody>
-        <tr class="" *ngFor="let r of rooms">
+        <tr *ngFor="let r of rooms">
           <td>{{ r.id }}</td>
           <td>{{ r.number }}</td>
           <td>{{ r.type | titlecase }}</td>
@@ -41,24 +130,25 @@
           >
             {{ r.status === 0 ? "Inactive" : "Active" }}
           </td>
-          <span>
-            <button
-              class="btn btn-outline-secondary"
-              type="button"
-              (click)="openEditRoomModal(editRoomModal, r)"
-            >
-              Edit
-            </button>
-          </span>
-          <span>
-            <button
-              class="btn btn-outline-danger"
-              type="button"
-              (click)="deleteRoom(r.id)"
-            >
-              Delete
-            </button>
-          </span>
+          <td>
+            <div class="d-flex justify-content-start gap-2">
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                type="button"
+                (click)="openEditRoomModal(editRoomModal, r)"
+              >
+                Edit
+              </button>
+
+              <button
+                class="btn btn-outline-danger btn-sm"
+                type="button"
+                (click)="deleteRoom(r.id)"
+              >
+                Delete
+              </button>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
