--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,9 +36,7 @@
               <a class="nav-link" routerLink="admin/dashboard">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="admin/dashboard/profile"
-                >Profile</a
-              >
+              <a class="nav-link" routerLink="admin/profile">Profile</a>
             </li>
           </ng-container>
 
