--- a/src/app/admin/booking/booking/booking.component.html
+++ b/src/app/admin/booking/booking/booking.component.html
@@ -41,7 +41,7 @@
               <button
                 class="btn btn-outline-danger btn-sm"
                 type="button"
-                (click)="confirmDeleteModal(deleteBookingModal)"
+                (click)="confirmDeleteModal(deleteBookingModal, r.id)"
               >
                 Delete
               </button>
