--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand me-auto" href="#">{{ title }}</a>
+      <a class="navbar-brand me-auto" [routerLink]="titleLink">{{ title }}</a>
       <button
         class="navbar-toggler"
         type="button"
