Change from localStorage to sessionStorage

--- a/src/app/profile-new/profile-new.component.html
+++ b/src/app/profile-new/profile-new.component.html
@@ -30,7 +30,7 @@
             </p>
             <p class="lead">
               <strong>Role:</strong>
-              {{ userProfiles.role === "user" ? "User" : "Admin" }}
+              {{ userProfiles.role === "member" ? "Member" : "Admin" }}
             </p>
           </ul>
         </div>
