--- a/src/app/user/bookings/bookings.component.html
+++ b/src/app/user/bookings/bookings.component.html
@@ -24,9 +24,7 @@
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Booking Id: {{ book.id }}</li>
-            <li class="list-group-item">
-              Room Type: {{ book.roomType | titlecase }}
-            </li>
+            <li class="list-group-item">Room Type: {{ book.roomType }}</li>
           </ul>
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
